@@ -1,3 +1,11 @@
+nenolod     2006/04/09 21:15:45 UTC	(20060409-5017)
+  Log:
+  more sanity checking
+
+  Changes:	Modified:
+  +6 -3		trunk/contrib/wumpus.c (File Modified) 
+
+
 nenolod     2006/04/09 21:11:23 UTC	(20060409-5015)
   Log:
   add declaration
